fix task history, task deserialization